# snappy

./: .claudeignore  CLAUDE.md  README.md  pyproject.toml
src/snappy/: __init__.py  __main__.py  app.py  backend.py
