[project]
name = "snappy"
version = "0.1.0"
description = "Btrfs snapshot analyzer TUI for snapper"
readme = "README.md"
authors = [
    { name = "Maciej Kalisiak", email = "maciej.kalisiak@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "humanize>=4.15.0",
    "textual>=8.2.0",
]

[project.scripts]
snappy = "snappy.__main__:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
